Make test_python_jl work without python-jl on PATH

--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,9 @@ commands =
     # used to build PyCall.jl via julia/with_rebuilt.py (when
     # PYJULIA_TEST_REBUILD=yes).
 
+setenv =
+    PYJULIA_TEST_PYTHON_JL_IS_INSTALLED = yes
+
 passenv =
     # Allow a workaround for "error initializing LibGit2 module":
     # https://github.com/JuliaLang/julia/issues/18693
