Move tests inside the package

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ commands =
 
     python -m julia.with_rebuilt -- \
         python -m pytest --log-file {envlogdir}/pytest.log \
-	--pyargs julia test \
+        --pyargs julia \
 	{posargs}
     # Using "python -m pytest" to exactly match the Python interpreter
     # used to build PyCall.jl via julia/with_rebuilt.py (when
