Install test dependencies using extras_require

--- a/tox.ini
+++ b/tox.ini
@@ -3,14 +3,9 @@ envlist = py3
 
 [testenv]
 deps =
-    pytest != 3.7.3
-    # Don't install 3.7.3 to avoid doctest failures in macOS
-    # https://github.com/pytest-dev/pytest/pull/3893#issuecomment-416560866
-
     pytest-cov
-    numpy
-    ipython
-    mock
+extras =
+    test
 commands =
     python -m julia.find_libpython --list-all --verbose
     # Print libpython candidates found by `find_libpython`.  It may be
