Add julia.runtests CLI

--- a/tox.ini
+++ b/tox.ini
@@ -11,13 +11,9 @@ commands =
     # Print libpython candidates found by `find_libpython`.  It may be
     # useful for debugging.
 
-    python -m julia.with_rebuilt -- \
-        python -m pytest --log-file {envlogdir}/pytest.log \
-        --pyargs julia \
+    python -m julia.runtests -- \
+        --log-file {envlogdir}/pytest.log \
 	{posargs}
-    # Using "python -m pytest" to exactly match the Python interpreter
-    # used to build PyCall.jl via julia/with_rebuilt.py (when
-    # PYJULIA_TEST_REBUILD=yes).
 
 setenv =
     PYJULIA_TEST_PYTHON_JL_IS_INSTALLED = yes
@@ -42,13 +38,9 @@ passenv =
     CI
 
 [pytest]
-addopts =
-    -p julia.pytestplugin
-    --doctest-modules
-
-norecursedirs = fake-julia
-
 log_file_level = DEBUG
+# Essential flags and configuration must be added to
+# src/julia/runtests.py
 
 [coverage:paths]
 source =
