Skip test_build_and_load in AppVeyor

--- a/tox.ini
+++ b/tox.ini
@@ -35,6 +35,9 @@ passenv =
     TRAVIS
     TRAVIS_*
 
+    # https://www.appveyor.com/docs/environment-variables/
+    APPVEYOR
+
     CI
 
 [pytest]
