--- a/tox.ini
+++ b/tox.ini
@@ -60,6 +60,8 @@ changedir = {toxinidir}/docs
 
 [testenv:style]
 deps =
+    isort == 4.3.17
     black == 19.3b0
 commands =
+    isort --recursive --check-only .
     black . {posargs:--check --diff}
