Use shell-retry to avoid timing issue
The test may be started before test.pypi.org updates it index.
Let's try to wait until it is updated.
See: https://travis-ci.org/JuliaPy/pyjulia/jobs/523283897#L448

--- a/ci/test-upload/tox.ini
+++ b/ci/test-upload/tox.ini
@@ -4,6 +4,8 @@ skipsdist = True
 
 [testenv]
 deps =
+    shell-retry == 0.0.8
+
     # These are the packages listed in extras_require in setup.py.
     # Not using `julia[test]` to avoid installing the test
     # dependencies from `test.pypi.org`:
@@ -13,6 +15,7 @@ deps =
     mock
 
 commands =
+    shell-retry --backoff=2 --interval-max=20 --retry-count=30 --verbose -- \
     pip install --index-url https://test.pypi.org/simple/ julia==0.4.1.dev
 
     python -c "from julia import install; install()"
