Upgrade pip for Python 2.7 manually in AppVeyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -56,11 +56,14 @@ install:
   - C:\projects\julia-binary.exe /S /D=C:\projects\julia
 
 build_script:
-  - "SET PATH=%PYTHONDIR%;%PYTHONDIR%\\Scripts;C:\\projects\\julia\\bin;%PATH%"
+  - "SET PATH=%cd%\\%BATDIR%;%PYTHONDIR%;%PYTHONDIR%\\Scripts;C:\\projects\\julia\\bin;%PATH%"
   - "\"C:\\Program Files (x86)\\Microsoft Visual Studio 14.0\\VC\\bin\\amd64\\editbin.exe\" %PYTHONDIR%\\python.exe /STACK:8000000"
   - "SET PYTHON=%PYTHONDIR%\\python.exe"
   - "%PYTHONDIR%\\python.exe -m pip install --quiet --upgrade pip"
+  - "%PYTHONDIR%\\python.exe -m pip --version"
   - "%PYTHONDIR%\\python.exe -m pip install --quiet tox"
+  - "python2.7 -m pip install --quiet --upgrade pip"
+  - "python2.7 -m pip --version"
   - "%PYTHONDIR%\\python.exe ci\\install_pycall.py"
 
 test_script:
