--- a/appveyor.yml
+++ b/appveyor.yml
@@ -59,10 +59,10 @@ build_script:
   - "SET PATH=%cd%\\%BATDIR%;%PYTHONDIR%;%PYTHONDIR%\\Scripts;C:\\projects\\julia\\bin;%PATH%"
   - "\"C:\\Program Files (x86)\\Microsoft Visual Studio 14.0\\VC\\bin\\amd64\\editbin.exe\" %PYTHONDIR%\\python.exe /STACK:8000000"
   - "SET PYTHON=%PYTHONDIR%\\python.exe"
-  - "%PYTHONDIR%\\python.exe -m pip install --quiet --upgrade pip virtualenv"
+  - "%PYTHONDIR%\\python.exe -m pip install --quiet --upgrade pip virtualenv setuptools"
   - "%PYTHONDIR%\\python.exe -m pip --version"
   - "%PYTHONDIR%\\python.exe -m pip install --quiet tox"
-  - "python2.7 -m pip install --quiet --upgrade pip virtualenv"
+  - "python2.7 -m pip install --quiet --upgrade pip virtualenv setuptools"
   - "python2.7 -m pip --version"
   - "%PYTHONDIR%\\python.exe ci\\install_pycall.py"
 
