--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,8 @@ deps =
 extras =
     test
 commands =
+    python -c 'import sys; print(sys.maxsize)'
+
     python -m julia.find_libpython --list-all --verbose
     # Print libpython candidates found by `find_libpython`.  It may be
     # useful for debugging.
