Register pytest markers to avoid warnings

--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,10 @@ log_file_level = DEBUG
 # Essential flags and configuration must be added to
 # src/julia/runtests.py
 
+markers =
+    pyjulia__using_default_setup: mark tests to be skipped with non-default setup
+# https://docs.pytest.org/en/latest/mark.html#registering-marks
+
 [coverage:paths]
 source =
     src/julia
