--- a/tox.ini
+++ b/tox.ini
@@ -3,33 +3,7 @@ envlist = py3
 
 [testenv]
 deps =
-    attrs==19.3.0
-    backcall==0.1.0
-    coverage==4.5.4
-    decorator==4.4.1
-    importlib-metadata==1.3.0
-    ipython==7.10.1
-    ipython-genutils==0.2.0
-    jedi==0.15.1
-    mock==3.0.5
-    more-itertools==8.0.2
-    numpy==1.17.4
-    packaging==19.2
-    parso==0.5.1
-    pexpect==4.7.0
-    pickleshare==0.7.5
-    pluggy==0.13.1
-    prompt-toolkit==3.0.2
-    ptyprocess==0.6.0
-    py==1.8.0
-    Pygments==2.5.2
-    pyparsing==2.4.5
-    pytest==5.3.1
-    pytest-cov==2.8.1
-    six==1.13.0
-    traitlets==4.3.3
-    wcwidth==0.1.7
-    zipp==0.6.0
+    pytest-cov
 extras =
     test
 commands =
