--- a/ci/test-upload/tox.ini
+++ b/ci/test-upload/tox.ini
@@ -16,7 +16,7 @@ deps =
 
 commands =
     shell-retry --backoff=2 --interval-max=20 --retry-count=30 --verbose -- \
-    pip install --index-url https://test.pypi.org/simple/ julia==0.5.3
+    pip install --index-url https://test.pypi.org/simple/ julia==0.5.4.dev
 
     python -c "from julia import install; install()"
     python -m julia.runtests -- \
