Pass-through $JULIA_DEBUG in tox

--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,8 @@ passenv =
     PYJULIA_TEST_REBUILD
     PYJULIA_TEST_RUNTIME
 
+    JULIA_DEBUG
+
     # See: test/test_compatible_exe.py
     PYJULIA_TEST_INCOMPATIBLE_PYTHONS
 
