--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           - windows-latest
         architecture: [x64, x86]
         python-version: ['3.7', '3.8']
-        julia-version: ['1.3', '~1.5.0-rc1']
+        julia-version: ['1.0', '1.3', '~1.5.0-rc1']
         exclude:
           - os: ubuntu-latest
             architecture: x86
