Ignore a python-jl -related failure in Windows in Github Actions

--- a/tox.ini
+++ b/tox.ini
@@ -39,6 +39,9 @@ passenv =
     # https://www.appveyor.com/docs/environment-variables/
     APPVEYOR
 
+    # https://docs.github.com/en/actions/configuring-and-managing-workflows/using-environment-variables#default-environment-variables
+    GITHUB_ACTIONS
+
     CI
 
 [pytest]
