--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,10 @@ jobs:
             architecture: x86
           - os: macos-latest
             architecture: x86
+          - os: macos-latest
+            julia-version: '1.3'
+          - os: windows-latest
+            julia-version: '1.3'
       fail-fast: false
     name: ${{ matrix.os }} ${{ matrix.architecture }}
       Python ${{ matrix.python-version }}
