Uncomment release/main

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - release/test-uploaded
       - release/test
-      # - release/main
+      - release/main
   workflow_dispatch:
 
 jobs:
