Run 'coverage combine' etc. via tox

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,13 @@ commands =
         --log-file {envlogdir}/pytest.log \
 	{posargs}
 
+commands_post =
+    # Strip off ".tox/..." from the coverage
+    # (see also [[coverage:paths]]):
+    -coverage combine .coverage
+    -coverage xml
+    -coverage report
+
 setenv =
     PYJULIA_TEST_PYTHON_JL_IS_INSTALLED = yes
     JULIA_DEBUG = all
