--- a/.travis.yml
+++ b/.travis.yml
@@ -13,22 +13,6 @@ env:
     - TOXENV=py
     - PYJULIA_TEST_INCOMPATIBLE_PYTHONS=/usr/bin/python2
 matrix:
-  # Python environment is not functional on OS X
-  include:
-      - language: generic
-        env:
-          - PYTHON=python2
-          - JULIA_VERSION=1.0
-          # - JULIA_VERSION=nightly
-        os: osx
-      - language: generic
-        env:
-          - PYTHON=python3
-          - PYJULIA_TEST_INCOMPATIBLE_PYTHONS=python2
-          - JULIA_VERSION=1.0
-          # - JULIA_VERSION=nightly
-        os: osx
-
   allow_failures:
     - env: JULIA_VERSION=nightly
 branches:
@@ -39,35 +23,22 @@ notifications:
 before_script:
   - echo ./ci/install-julia.sh "$JULIA_VERSION"
   - ./ci/install-julia.sh "$JULIA_VERSION"
-  - if [ "$TRAVIS_OS_NAME" = "osx" -a "$PYTHON" = "python3" ];
-    then
-        brew update;
-        brew upgrade python || echo "Ignoring errors...";
-        if ! which $PYTHON;
-        then
-            PYTHON="$(ls -1 /usr/local/opt/python@3.*/bin/python3 | head -n1)";
-        fi;
-    fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" -a "$PYTHON" = "python2" ]; then brew update; brew list python@2 &>/dev/null || brew install python@2 || echo "Ignoring errors..."; fi
-  # Ignoring errors from brew since it may actually be OK to do so.
-  # Following which command will catch installation failure:
-  - PYTHON=${PYTHON:-python}
-  - which $PYTHON
-  - $PYTHON -m pip --version
-  - $PYTHON -m pip install --quiet tox coveralls
-  - $PYTHON ci/install_pycall.py
+  - which python
+  - python -m pip --version
+  - python -m pip install --quiet tox coveralls
+  - python ci/install_pycall.py
 script:
 
   # Point PYJULIA_TEST_INCOMPATIBLE_PYTHONS to incompatible Python
   # executable (see: test/test_compatible_exe.py).
-  - if [ "$PYJULIA_TEST_INCOMPATIBLE_PYTHONS" = "$PYTHON" ]; then
+  - if [ "$PYJULIA_TEST_INCOMPATIBLE_PYTHONS" = python ]; then
       PYJULIA_TEST_INCOMPATIBLE_PYTHONS="";
     elif ! which "$PYJULIA_TEST_INCOMPATIBLE_PYTHONS"; then
       PYJULIA_TEST_INCOMPATIBLE_PYTHONS="";
     fi
   - echo "$PYJULIA_TEST_INCOMPATIBLE_PYTHONS"
 
-  - PYJULIA_TEST_REBUILD=yes $PYTHON -m tox -- --cov=julia
+  - PYJULIA_TEST_REBUILD=yes python -m tox -- --cov=julia
   - cat .tox/py/log/pytest.log
 
 after_success:
