Fix tox.ini for style and doc envs

--- a/tox.ini
+++ b/tox.ini
@@ -74,6 +74,7 @@ deps =
     -r{toxinidir}/docs/requirements.txt
 commands =
     sphinx-build -b "html" -d build/doctrees {posargs} source "build/html"
+commands_post =
 changedir = {toxinidir}/docs
 
 [testenv:style]
@@ -83,3 +84,4 @@ deps =
 commands =
     isort --recursive --check-only .
     black . {posargs:--check --diff}
+commands_post =
