--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           - windows-latest
         architecture: [x64, x86]
         python-version: ['3.7', '3.8']
-        julia-version: ['1.3', '~1.5.0-rc1']
+        julia-version: ['1.0', '1.3', '~1.5.0-rc1', 'nightly']
         exclude:
           - os: ubuntu-latest
             architecture: x86
@@ -28,6 +28,10 @@ jobs:
             julia-version: '1.3'
           - os: windows-latest
             julia-version: '1.3'
+          - os: macos-latest
+            julia-version: 'nightly'
+          - os: windows-latest
+            julia-version: 'nightly'
       fail-fast: false
     name: Test ${{ matrix.os }} ${{ matrix.architecture }}
       Python ${{ matrix.python-version }}
