--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           - os: windows-latest
             julia-version: '1.3'
       fail-fast: false
-    name: ${{ matrix.os }} ${{ matrix.architecture }}
+    name: Test ${{ matrix.os }} ${{ matrix.architecture }}
       Python ${{ matrix.python-version }}
       Julia ${{ matrix.julia-version }}
     steps:
