--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,13 @@ commands =
         --log-file {envlogdir}/pytest.log \
 	{posargs}
 
+commands_post =
+    # Strip off ".tox/..." from the coverage
+    # (see also [[coverage:paths]]):
+    -coverage combine .coverage
+    -coverage xml
+    -coverage report
+
 setenv =
     PYJULIA_TEST_PYTHON_JL_IS_INSTALLED = yes
 
@@ -66,6 +73,7 @@ deps =
     -r{toxinidir}/docs/requirements.txt
 commands =
     sphinx-build -b "html" -d build/doctrees {posargs} source "build/html"
+commands_post =
 changedir = {toxinidir}/docs
 
 [testenv:style]
@@ -75,3 +83,4 @@ deps =
 commands =
     isort --recursive --check-only .
     black . {posargs:--check --diff}
+commands_post =
