--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,16 +18,9 @@ jobs:
           - macos-latest
           - windows-latest
         architecture: [x64, x86]
-        python-version:
-          - '2.7'
-          - '3.7'
-          - '3.8'
+        python-version: ['3.7', '3.8']
         julia-version: ['1.0', '1.3', '~1.5.0-rc1', 'nightly']
         exclude:
-          - python-version: '2.7'
-            architecture: x86
-          - python-version: '2.7'
-            os: macos-latest
           - os: ubuntu-latest
             architecture: x86
           - os: macos-latest
@@ -40,6 +33,15 @@ jobs:
             julia-version: 'nightly'
           - os: windows-latest
             julia-version: 'nightly'
+        include:
+          - os: ubuntu-latest
+            architecture: x64
+            python-version: '2.7'
+            julia-version: '1'
+          - os: windows-latest
+            architecture: x64
+            python-version: '2.7'
+            julia-version: '1'
       fail-fast: false
     name: Test ${{ matrix.os }} ${{ matrix.architecture }}
       Python ${{ matrix.python-version }}
