--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,20 +65,8 @@ jobs:
           python -m pip install --upgrade tox
       - name: Install PyCall
         run: python ci/install_pycall.py
-      - name: Set PYJULIA_TEST_INCOMPATIBLE_PYTHONS
-        if: ${{ matrix.python-version != '2.7' }}
-        run: |
-          if which python2; then
-            py2="$(which python2)"
-            echo "PYJULIA_TEST_INCOMPATIBLE_PYTHONS=$py2" >> $GITHUB_ENV
-          fi
-        shell: bash
-      - name: Check PYJULIA_TEST_INCOMPATIBLE_PYTHONS
-        if: ${{ matrix.python-version != '2.7' }}
-        run: echo "$PYJULIA_TEST_INCOMPATIBLE_PYTHONS"
-        shell: bash
       - name: Run test
-        run: python -m tox -- --cov=julia
+        run: python -m tox -- --verbose --cov=julia
         env:
           CI: 'true'  # run tests marked by @only_in_ci
           TOXENV: py
