--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,9 @@ jobs:
           - macos-latest
           - windows-latest
         architecture: [x64, x86]
-        python-version: ['3.7', '3.8']
+        python-version:
+            - '3.9'
+            - '3.10'
         julia-version:
             - '1.0'
             - '1.6'
@@ -95,6 +97,6 @@ jobs:
       - name: Setup python
         uses: actions/setup-python@v1
         with:
-          python-version: '3.8'
+          python-version: '3.10'
       - run: python -m pip install --upgrade tox
       - run: python -m tox -e ${{ matrix.toxenv }}
