--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,16 +19,20 @@ jobs:
           - windows-latest
         architecture: [x64, x86]
         python-version: ['3.7', '3.8']
-        julia-version: ['1.0', '1.3', '~1.5.0-rc1', 'nightly']
+        julia-version:
+          - '1.0'
+          - '1.6'
+          - '~1.7.0-rc1'
+          # - 'nightly'  # TODO: reenable
         exclude:
           - os: ubuntu-latest
             architecture: x86
           - os: macos-latest
             architecture: x86
           - os: macos-latest
-            julia-version: '1.3'
+            julia-version: '1.6'
           - os: windows-latest
-            julia-version: '1.3'
+            julia-version: '1.6'
           - os: macos-latest
             julia-version: 'nightly'
           - os: windows-latest
