--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           - '1.0'
           - '1.6'
           - '~1.7.0-rc1'
-          # - 'nightly'  # TODO: reenable
+          - 'nightly'
         exclude:
           - os: ubuntu-latest
             architecture: x86
