--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Set up Julia
         uses: julia-actions/setup-julia@v1
         with:
-          version: ^1.5.0-rc1
+          version: '1.6'
       - name: Install tox
         run: python -m pip install --user tox
       - run: cd ci/test-upload && python -m tox
