--- a/tox.ini
+++ b/tox.ini
@@ -79,7 +79,7 @@ changedir = {toxinidir}/docs
 [testenv:style]
 deps =
     isort == 4.3.17
-    black == 19.3b0
+    black == 22.3.0
 commands =
     isort --recursive --check-only .
     black . {posargs:--check --diff}
