--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,9 +55,10 @@ jobs:
             python-version: '3.8'
             julia-version: '1'
       fail-fast: false
-    name: Test ${{ matrix.os }} ${{ matrix.architecture }}
-      Python ${{ matrix.python-version }}
-      Julia ${{ matrix.julia-version }}
+    name: Test 
+      py${{ matrix.python-version }}
+      jl${{ matrix.julia-version }}
+      ${{ matrix.os }} ${{ matrix.architecture }}
     steps:
       - uses: actions/checkout@v1
       - name: Setup python
